# vibe-terminal

./: .gitignore  Makefile  README.md  config.example.yaml  docker-compose.yml
.github/workflows/: release.yml
agent/: Cargo.toml
agent/src/: buffer.rs  client.rs  config.rs  fs.rs  lib.rs  main.rs  protocol.rs  pty_manager.rs  registry.rs
agent/tests/: pty_smoke.rs
deploy/: Caddyfile.example
deploy/launchd/: com.vibe-terminal.agent.plist
deploy/scripts/: vibe-agent-wsl.sh
deploy/systemd/: vibe-agent.service
docs/: deployment.md
docs/protocol/: v1.md
docs/superpowers/plans/: 2026-06-27-agent-token-management.md  2026-06-27-vibe-terminal.md  2026-06-29-frontend-glassmorphism-ui.md  2026-07-02-file-manager-terminal-utilities.md  2026-07-10-github-container-image-compose.md  2026-07-10-web-login-2fa.md  2026-07-12-frontend-settings-i18n-mobile.md
docs/superpowers/specs/: 2026-06-27-agent-token-management-design.md  2026-06-27-vibe-terminal-design.md  2026-06-29-frontend-glassmorphism-ui-design.md  2026-07-02-file-manager-terminal-utilities-design.md  2026-07-10-github-container-image-compose-design.md  2026-07-10-web-login-2fa-design.md  2026-07-12-frontend-settings-i18n-mobile-design.md
server/: Dockerfile  go.mod  go.sum
server/cmd/server/: main.go
server/internal/audit/: audit.go
server/internal/auth/: auth.go  auth_test.go  challenge.go  challenge_test.go  limiter.go  limiter_test.go  totp.go  (+3 more)
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api-internals.ts  api.ts  main.tsx  styles.css  ws.ts
(+50 files in other folders)
